--- a/src/output.css
+++ b/src/output.css
@@ -559,27 +559,6 @@
   .top-\[5\%\] {
     top: 5%;
   }
-  .top-\[20px\] {
-    top: 20px;
-  }
-  .top-\[21px\] {
-    top: 21px;
-  }
-  .top-\[22\] {
-    top: 22;
-  }
-  .top-\[22p\] {
-    top: 22p;
-  }
-  .top-\[22px\] {
-    top: 22px;
-  }
-  .top-\[2\] {
-    top: 2;
-  }
-  .top-\[2px\] {
-    top: 2px;
-  }
   .top-\[100px\] {
     top: 100px;
   }
@@ -588,15 +567,6 @@
   }
   .top-\[1px\] {
     top: 1px;
-  }
-  .top-\[50\%\] {
-    top: 50%;
-  }
-  .top-\[50\] {
-    top: 50;
-  }
-  .top-\[5\] {
-    top: 5;
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -633,15 +603,6 @@
   }
   .left-\[30\%\] {
     left: 30%;
-  }
-  .left-\[50\%\] {
-    left: 50%;
-  }
-  .left-\[50\] {
-    left: 50;
-  }
-  .left-\[5\] {
-    left: 5;
   }
   .-z-10 {
     z-index: calc(10 * -1);
@@ -825,26 +786,6 @@
     --tw-translate-y: calc(var(--spacing) * 0);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-\[-50\%\] {
-    --tw-translate-x: -50%;
-    --tw-translate-y: -50%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[50\%\] {
-    --tw-translate-x: 50%;
-    --tw-translate-y: 50%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[50\] {
-    --tw-translate-x: 50;
-    --tw-translate-y: 50;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[5\] {
-    --tw-translate-x: 5;
-    --tw-translate-y: 5;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-1 {
     --tw-translate-x: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -876,6 +817,9 @@
   }
   .list-none {
     list-style-type: none;
+  }
+  .break-after-all {
+    break-after: all;
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1001,9 +945,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-\[\#2B2A2A\] {
-    background-color: #2B2A2A;
-  }
   .bg-\[\#131417\] {
     background-color: #131417;
   }
@@ -1013,17 +954,11 @@
   .bg-\[\#222222\] {
     background-color: #222222;
   }
+  .bg-\[\#2B2A2A\] {
+    background-color: #2B2A2A;
+  }
   .bg-\[\#2E2C29\] {
     background-color: #2E2C29;
-  }
-  .bg-\[\#\] {
-    background-color: #;
-  }
-  .bg-\[131417\] {
-    background-color: 131417;
-  }
-  .bg-\[bg-\[\#131417\]\] {
-    background-color: bg-[#131417];
   }
   .bg-gray-800 {
     background-color: var(--color-gray-800);
@@ -1045,9 +980,6 @@
   }
   .bg-yellow-500 {
     background-color: var(--color-yellow-500);
-  }
-  .to-0\% {
-    --tw-gradient-to-position: 0%;
   }
   .object-cover {
     object-fit: cover;
@@ -1262,9 +1194,6 @@
   .text-\[\#222222\] {
     color: #222222;
   }
-  .text-\[\#\] {
-    color: #;
-  }
   .text-black {
     color: var(--color-black);
   }
@@ -1330,36 +1259,6 @@
   }
   .ring-\[\#3a3a3d\] {
     --tw-ring-color: #3a3a3d;
-  }
-  .ring-\[\#666\] {
-    --tw-ring-color: #666;
-  }
-  .ring-\[\#66\] {
-    --tw-ring-color: #66;
-  }
-  .ring-\[\#646464\] {
-    --tw-ring-color: #646464;
-  }
-  .ring-\[\#\] {
-    --tw-ring-color: #;
-  }
-  .ring-\[1\] {
-    --tw-ring-color: 1;
-  }
-  .ring-\[1p\] {
-    --tw-ring-color: 1p;
-  }
-  .ring-\[3666\] {
-    --tw-ring-color: 3666;
-  }
-  .ring-\[366\] {
-    --tw-ring-color: 366;
-  }
-  .ring-\[36\] {
-    --tw-ring-color: 36;
-  }
-  .ring-\[3\] {
-    --tw-ring-color: 3;
   }
   .ring-\[https\:\/\/alone0007\.github\.io\/Bookmark-Page\/public\/index\.html3a3a3d\] {
     --tw-ring-color: //alone0007.github.io/Bookmark-Page/public/index.html3a3a3d;
@@ -1549,6 +1448,240 @@
       background-color: var(--color-primary);
     }
   }
+  .after\:absolute {
+    &::after {
+      content: var(--tw-content);
+      position: absolute;
+    }
+  }
+  .after\:-right-5 {
+    &::after {
+      content: var(--tw-content);
+      right: calc(var(--spacing) * -5);
+    }
+  }
+  .after\:-right-52 {
+    &::after {
+      content: var(--tw-content);
+      right: calc(var(--spacing) * -52);
+    }
+  }
+  .after\:right-0 {
+    &::after {
+      content: var(--tw-content);
+      right: calc(var(--spacing) * 0);
+    }
+  }
+  .after\:right-5 {
+    &::after {
+      content: var(--tw-content);
+      right: calc(var(--spacing) * 5);
+    }
+  }
+  .after\:bottom-0 {
+    &::after {
+      content: var(--tw-content);
+      bottom: calc(var(--spacing) * 0);
+    }
+  }
+  .after\:bottom-1 {
+    &::after {
+      content: var(--tw-content);
+      bottom: calc(var(--spacing) * 1);
+    }
+  }
+  .after\:bottom-2 {
+    &::after {
+      content: var(--tw-content);
+      bottom: calc(var(--spacing) * 2);
+    }
+  }
+  .after\:bottom-\[1\] {
+    &::after {
+      content: var(--tw-content);
+      bottom: 1;
+    }
+  }
+  .after\:bottom-\[1p\] {
+    &::after {
+      content: var(--tw-content);
+      bottom: 1p;
+    }
+  }
+  .after\:bottom-\[1px\] {
+    &::after {
+      content: var(--tw-content);
+      bottom: 1px;
+    }
+  }
+  .after\:bottom-\[2px\] {
+    &::after {
+      content: var(--tw-content);
+      bottom: 2px;
+    }
+  }
+  .after\:-left-52 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * -52);
+    }
+  }
+  .after\:-left-\[00px\] {
+    &::after {
+      content: var(--tw-content);
+      left: calc(00px * -1);
+    }
+  }
+  .after\:-left-\[200\] {
+    &::after {
+      content: var(--tw-content);
+      left: calc(200 * -1);
+    }
+  }
+  .after\:-left-\[200px\] {
+    &::after {
+      content: var(--tw-content);
+      left: calc(200px * -1);
+    }
+  }
+  .after\:-left-\[20\] {
+    &::after {
+      content: var(--tw-content);
+      left: calc(20 * -1);
+    }
+  }
+  .after\:-left-\[2\] {
+    &::after {
+      content: var(--tw-content);
+      left: calc(2 * -1);
+    }
+  }
+  .after\:left-0 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 0);
+    }
+  }
+  .after\:left-1 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 1);
+    }
+  }
+  .after\:left-5 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 5);
+    }
+  }
+  .after\:left-9 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 9);
+    }
+  }
+  .after\:left-10 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 10);
+    }
+  }
+  .after\:left-52 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 52);
+    }
+  }
+  .after\:left-96 {
+    &::after {
+      content: var(--tw-content);
+      left: calc(var(--spacing) * 96);
+    }
+  }
+  .after\:-z-10 {
+    &::after {
+      content: var(--tw-content);
+      z-index: calc(10 * -1);
+    }
+  }
+  .after\:z-10 {
+    &::after {
+      content: var(--tw-content);
+      z-index: 10;
+    }
+  }
+  .after\:hidden {
+    &::after {
+      content: var(--tw-content);
+      display: none;
+    }
+  }
+  .after\:h-1 {
+    &::after {
+      content: var(--tw-content);
+      height: calc(var(--spacing) * 1);
+    }
+  }
+  .after\:h-2 {
+    &::after {
+      content: var(--tw-content);
+      height: calc(var(--spacing) * 2);
+    }
+  }
+  .after\:w-2 {
+    &::after {
+      content: var(--tw-content);
+      width: calc(var(--spacing) * 2);
+    }
+  }
+  .after\:w-4 {
+    &::after {
+      content: var(--tw-content);
+      width: calc(var(--spacing) * 4);
+    }
+  }
+  .after\:w-5 {
+    &::after {
+      content: var(--tw-content);
+      width: calc(var(--spacing) * 5);
+    }
+  }
+  .after\:w-20 {
+    &::after {
+      content: var(--tw-content);
+      width: calc(var(--spacing) * 20);
+    }
+  }
+  .after\:w-44 {
+    &::after {
+      content: var(--tw-content);
+      width: calc(var(--spacing) * 44);
+    }
+  }
+  .after\:w-52 {
+    &::after {
+      content: var(--tw-content);
+      width: calc(var(--spacing) * 52);
+    }
+  }
+  .after\:w-fit {
+    &::after {
+      content: var(--tw-content);
+      width: fit-content;
+    }
+  }
+  .after\:w-full {
+    &::after {
+      content: var(--tw-content);
+      width: 100%;
+    }
+  }
+  .after\:bg-primary {
+    &::after {
+      content: var(--tw-content);
+      background-color: var(--color-primary);
+    }
+  }
   .hover\:rounded-tr-3xl {
     &:hover {
       @media (hover: hover) {
@@ -1570,13 +1703,6 @@
       }
     }
   }
-  .hover\:bg-yellow-600 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-yellow-600);
-      }
-    }
-  }
   .hover\:before\:size-\[900px\] {
     &:hover {
       @media (hover: hover) {
@@ -1585,6 +1711,14 @@
           width: 900px;
           height: 900px;
         }
+      }
+    }
+  }
+  .sm\:after\:-right-52 {
+    @media (width >= 40rem) {
+      &::after {
+        content: var(--tw-content);
+        right: calc(var(--spacing) * -52);
       }
     }
   }
@@ -1606,16 +1740,6 @@
   .md\:top-5 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * 5);
-    }
-  }
-  .md\:top-6 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 6);
-    }
-  }
-  .md\:top-7 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 7);
     }
   }
   .md\:top-8 {
@@ -1708,19 +1832,9 @@
       justify-content: center;
     }
   }
-  .md\:rounded-3xl {
-    @media (width >= 48rem) {
-      border-radius: var(--radius-3xl);
-    }
-  }
   .md\:pb-0 {
     @media (width >= 48rem) {
       padding-bottom: calc(var(--spacing) * 0);
-    }
-  }
-  .md\:text-left {
-    @media (width >= 48rem) {
-      text-align: left;
     }
   }
   .md\:text-5xl {
@@ -1748,14 +1862,25 @@
       }
     }
   }
+  .md\:after\:absolute {
+    @media (width >= 48rem) {
+      &::after {
+        content: var(--tw-content);
+        position: absolute;
+      }
+    }
+  }
+  .md\:after\:left-9 {
+    @media (width >= 48rem) {
+      &::after {
+        content: var(--tw-content);
+        left: calc(var(--spacing) * 9);
+      }
+    }
+  }
   .lg\:mr-24 {
     @media (width >= 64rem) {
       margin-right: calc(var(--spacing) * 24);
-    }
-  }
-  .lg\:grid-cols-2 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
   .lg\:grid-cols-3 {
@@ -1776,16 +1901,6 @@
   .lg\:pb-0 {
     @media (width >= 64rem) {
       padding-bottom: calc(var(--spacing) * 0);
-    }
-  }
-  .lg\:pb-2 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 2);
-    }
-  }
-  .lg\:pb-5 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 5);
     }
   }
   .lg\:pl-16 {
@@ -1907,48 +2022,6 @@
   syntax: "*";
   inherits: false;
   initial-value: solid;
-}
-@property --tw-gradient-position {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-from {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-via {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-to {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-stops {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-via-stops {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-from-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 0%;
-}
-@property --tw-gradient-via-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 50%;
-}
-@property --tw-gradient-to-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 100%;
 }
 @property --tw-leading {
   syntax: "*";
