--- a/src/output.css
+++ b/src/output.css
@@ -523,9 +523,6 @@
   .collapse {
     visibility: collapse;
   }
-  .visible {
-    visibility: visible;
-  }
   .absolute {
     position: absolute;
   }
@@ -547,9 +544,6 @@
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
-  .top-\[5\%\] {
-    top: 5%;
-  }
   .top-\[100px\] {
     top: 100px;
   }
@@ -558,6 +552,9 @@
   }
   .top-\[1px\] {
     top: 1px;
+  }
+  .top-\[5\%\] {
+    top: 5%;
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -585,12 +582,6 @@
   }
   .-z-10 {
     z-index: calc(10 * -1);
-  }
-  .-z-20 {
-    z-index: calc(20 * -1);
-  }
-  .z-5 {
-    z-index: 5;
   }
   .z-20 {
     z-index: 20;
@@ -658,14 +649,6 @@
   .table {
     display: table;
   }
-  .size-1 {
-    width: calc(var(--spacing) * 1);
-    height: calc(var(--spacing) * 1);
-  }
-  .size-2 {
-    width: calc(var(--spacing) * 2);
-    height: calc(var(--spacing) * 2);
-  }
   .size-4 {
     width: calc(var(--spacing) * 4);
     height: calc(var(--spacing) * 4);
@@ -673,10 +656,6 @@
   .size-5 {
     width: calc(var(--spacing) * 5);
     height: calc(var(--spacing) * 5);
-  }
-  .size-6 {
-    width: calc(var(--spacing) * 6);
-    height: calc(var(--spacing) * 6);
   }
   .size-7 {
     width: calc(var(--spacing) * 7);
@@ -689,14 +668,6 @@
   .size-14 {
     width: calc(var(--spacing) * 14);
     height: calc(var(--spacing) * 14);
-  }
-  .size-16 {
-    width: calc(var(--spacing) * 16);
-    height: calc(var(--spacing) * 16);
-  }
-  .size-20 {
-    width: calc(var(--spacing) * 20);
-    height: calc(var(--spacing) * 20);
   }
   .size-36 {
     width: calc(var(--spacing) * 36);
@@ -735,24 +706,6 @@
   .h-screen {
     height: 100vh;
   }
-  .w-0 {
-    width: calc(var(--spacing) * 0);
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
-  }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
-  }
-  .w-16 {
-    width: calc(var(--spacing) * 16);
-  }
   .w-72 {
     width: calc(var(--spacing) * 72);
   }
@@ -764,9 +717,6 @@
   }
   .w-\[400px\] {
     width: 400px;
-  }
-  .w-fit {
-    width: fit-content;
   }
   .w-full {
     width: 100%;
@@ -855,14 +805,8 @@
   .self-center {
     align-self: center;
   }
-  .overflow-auto {
-    overflow: auto;
-  }
   .overflow-hidden {
     overflow: hidden;
-  }
-  .overflow-visible {
-    overflow: visible;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
@@ -876,72 +820,17 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
-  .rounded-t-full {
-    border-top-left-radius: calc(infinity * 1px);
-    border-top-right-radius: calc(infinity * 1px);
-  }
   .rounded-tl-2xl {
     border-top-left-radius: var(--radius-2xl);
-  }
-  .rounded-tl-4xl {
-    border-top-left-radius: var(--radius-4xl);
-  }
-  .rounded-tl-\[0px\] {
-    border-top-left-radius: 0px;
-  }
-  .rounded-tl-\[40\] {
-    border-top-left-radius: 40;
-  }
-  .rounded-tl-\[40px\] {
-    border-top-left-radius: 40px;
-  }
-  .rounded-tl-\[4\] {
-    border-top-left-radius: 4;
   }
   .rounded-tl-\[30px\] {
     border-top-left-radius: 30px;
   }
-  .rounded-tl-\[70px\] {
-    border-top-left-radius: 70px;
-  }
-  .rounded-tl-full {
-    border-top-left-radius: calc(infinity * 1px);
-  }
-  .rounded-tl-xl {
-    border-top-left-radius: var(--radius-xl);
-  }
   .rounded-tr-2xl {
     border-top-right-radius: var(--radius-2xl);
   }
-  .rounded-tr-3xl {
-    border-top-right-radius: var(--radius-3xl);
-  }
-  .rounded-tr-4xl {
-    border-top-right-radius: var(--radius-4xl);
-  }
-  .rounded-tr-\[0px\] {
-    border-top-right-radius: 0px;
-  }
   .rounded-tr-\[30px\] {
     border-top-right-radius: 30px;
-  }
-  .rounded-tr-\[40\] {
-    border-top-right-radius: 40;
-  }
-  .rounded-tr-\[40px\] {
-    border-top-right-radius: 40px;
-  }
-  .rounded-tr-\[4\] {
-    border-top-right-radius: 4;
-  }
-  .rounded-tr-\[70px\] {
-    border-top-right-radius: 70px;
-  }
-  .rounded-tr-full {
-    border-top-right-radius: calc(infinity * 1px);
-  }
-  .rounded-tr-xl {
-    border-top-right-radius: var(--radius-xl);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -968,15 +857,6 @@
   .bg-\[\#2E2C29\] {
     background-color: #2E2C29;
   }
-  .bg-\[\#313131\] {
-    background-color: #313131;
-  }
-  .bg-\[\#444444\] {
-    background-color: #444444;
-  }
-  .bg-\[\#\] {
-    background-color: #;
-  }
   .bg-primary {
     background-color: var(--color-primary);
   }
@@ -989,29 +869,17 @@
   .object-cover {
     object-fit: cover;
   }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
-  }
   .p-\[13px\] {
     padding: 13px;
   }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
-  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
-  }
-  .px-5 {
-    padding-inline: calc(var(--spacing) * 5);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
-  }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -1025,17 +893,8 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
-  .py-6 {
-    padding-block: calc(var(--spacing) * 6);
-  }
-  .py-9 {
-    padding-block: calc(var(--spacing) * 9);
-  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
-  }
-  .py-\[13px\] {
-    padding-block: 13px;
   }
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
@@ -1048,9 +907,6 @@
   }
   .pt-16 {
     padding-top: calc(var(--spacing) * 16);
-  }
-  .pr-3 {
-    padding-right: calc(var(--spacing) * 3);
   }
   .pr-20 {
     padding-right: calc(var(--spacing) * 20);
@@ -1075,9 +931,6 @@
   }
   .pb-\[100px\] {
     padding-bottom: 100px;
-  }
-  .pl-3 {
-    padding-left: calc(var(--spacing) * 3);
   }
   .pl-7 {
     padding-left: calc(var(--spacing) * 7);
@@ -1159,9 +1012,6 @@
   .underline {
     text-decoration-line: underline;
   }
-  .opacity-0 {
-    opacity: 0%;
-  }
   .ring-1 {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1174,20 +1024,8 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-2xl {
-    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-2xs {
-    --tw-shadow: 0 1px var(--tw-shadow-color, rgb(0 0 0 / 0.05));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-sm {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-xl {
@@ -1198,17 +1036,8 @@
     --tw-shadow: 0 1px 2px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.05));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-amber-400 {
-    --tw-shadow-color: var(--color-amber-400);
-  }
-  .shadow-amber-500 {
-    --tw-shadow-color: var(--color-amber-500);
-  }
   .shadow-primary {
     --tw-shadow-color: var(--color-primary);
-  }
-  .shadow-white {
-    --tw-shadow-color: var(--color-white);
   }
   .ring-\[\#3a3a3d\] {
     --tw-ring-color: #3a3a3d;
@@ -1250,10 +1079,6 @@
     --tw-duration: 100ms;
     transition-duration: 100ms;
   }
-  .duration-150 {
-    --tw-duration: 150ms;
-    transition-duration: 150ms;
-  }
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
@@ -1273,20 +1098,6 @@
       }
     }
   }
-  .group-hover\:w-16 {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        width: calc(var(--spacing) * 16);
-      }
-    }
-  }
-  .group-hover\:w-\[90px\] {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        width: 90px;
-      }
-    }
-  }
   .group-hover\:scale-110 {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -1294,20 +1105,6 @@
         --tw-scale-y: 110%;
         --tw-scale-z: 110%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .group-hover\:bg-primary {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        background-color: var(--color-primary);
-      }
-    }
-  }
-  .group-hover\:opacity-100 {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        opacity: 100%;
       }
     }
   }
@@ -1386,78 +1183,10 @@
       background-color: var(--color-primary);
     }
   }
-  .after\:absolute {
-    &::after {
-      content: var(--tw-content);
-      position: absolute;
-    }
-  }
-  .after\:size-5 {
-    &::after {
-      content: var(--tw-content);
-      width: calc(var(--spacing) * 5);
-      height: calc(var(--spacing) * 5);
-    }
-  }
-  .after\:bg-red-700 {
-    &::after {
-      content: var(--tw-content);
-      background-color: var(--color-red-700);
-    }
-  }
-  .after\:content-\[s\] {
-    &::after {
-      content: var(--tw-content);
-      --tw-content: s;
-      content: var(--tw-content);
-    }
-  }
-  .after\:content-\[sa\] {
-    &::after {
-      content: var(--tw-content);
-      --tw-content: sa;
-      content: var(--tw-content);
-    }
-  }
-  .after\:content-\[sal\] {
-    &::after {
-      content: var(--tw-content);
-      --tw-content: sal;
-      content: var(--tw-content);
-    }
-  }
-  .hover\:rounded-tr-3xl {
-    &:hover {
-      @media (hover: hover) {
-        border-top-right-radius: var(--radius-3xl);
-      }
-    }
-  }
-  .hover\:rounded-br-3xl {
-    &:hover {
-      @media (hover: hover) {
-        border-bottom-right-radius: var(--radius-3xl);
-      }
-    }
-  }
   .hover\:bg-primary {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-primary);
-      }
-    }
-  }
-  .hover\:p-3 {
-    &:hover {
-      @media (hover: hover) {
-        padding: calc(var(--spacing) * 3);
-      }
-    }
-  }
-  .hover\:pl-3 {
-    &:hover {
-      @media (hover: hover) {
-        padding-left: calc(var(--spacing) * 3);
       }
     }
   }
@@ -1482,11 +1211,6 @@
       top: calc(10% * -1);
     }
   }
-  .md\:-top-\[10px\] {
-    @media (width >= 48rem) {
-      top: calc(10px * -1);
-    }
-  }
   .md\:top-5 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * 5);
@@ -1495,6 +1219,11 @@
   .md\:top-8 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * 8);
+    }
+  }
+  .md\:top-\[50px\] {
+    @media (width >= 48rem) {
+      top: 50px;
     }
   }
   .md\:-left-\[30\%\] {
